force-app/main/default/objects/Candidate__c/fields/Academic_Record_Average__c.field-meta.xml
<CustomField>
    <fullName>Academic_Record_Average__c</fullName>
    <label>Academic Record Average</label>
    <summarizedField>Academic_Record__c.Average__c</summarizedField>
    <summaryForeignKey>Academic_Record__c.Candidate__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>