force-app/main/default/objects/Candidate__c/fields/Actively_Interviewing__c.field-meta.xml
<CustomField>
    <fullName>Actively_Interviewing__c</fullName>
    <description>Whether the candidate is currently interviewing elsewhere.</description>
    <inlineHelpText>Whether the candidate is currently interviewing elsewhere.</inlineHelpText>
    <label>Actively Interviewing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>