force-app/main/default/objects/Candidate__c/fields/Additional_Documents_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Documents_Title__c</fullName>
    <label>Additional Documents Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>