force-app/main/default/objects/Candidate__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Residential or mailing address of the candidate (city, province, or full address).</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>