force-app/main/default/objects/Candidate__c/fields/Bonus_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Expectation__c</fullName>
    <description>Whether candidate expects a bonus or 13th check.</description>
    <inlineHelpText>Whether candidate expects a bonus or 13th check.</inlineHelpText>
    <label>Bonus Expectation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>