force-app/main/default/objects/Candidate__c/fields/Candidate_Journey_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Journey_Outcome__c</fullName>
    <label>Candidate Journey Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate Driven - Withdrew Application</fullName>
            </value>
            <value>
                <fullName>Candidate Driven - Not Interested in Role</fullName>
            </value>
            <value>
                <fullName>Candidate Driven - Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Candidate Driven - Accepted Another Offer</fullName>
            </value>
            <value>
                <fullName>Candidate Driven - Happy at current Company</fullName>
            </value>
            <value>
                <fullName>Candidate Driven - Salary/Compensation Expectations Not Met</fullName>
            </value>
            <value>
                <fullName>Company Driven - Skills Mismatch</fullName>
            </value>
            <value>
                <fullName>Company Driven - Insufficient Experience</fullName>
            </value>
            <value>
                <fullName>Company Driven - Overqualified</fullName>
            </value>
            <value>
                <fullName>Company Driven - Cultural or Team Fit Concerns</fullName>
            </value>
            <value>
                <fullName>Company Driven - Budget or Hiring Freeze</fullName>
            </value>
            <value>
                <fullName>Company Driven - Better Qualified Candidates Selected</fullName>
            </value>
            <value>
                <fullName>Company Driven - No Current Openings Matching Profile</fullName>
            </value>
            <value>
                <fullName>Company Driven - Failed screening (background, assessment, test, etc.)</fullName>
            </value>
            <value>
                <fullName>Other - please specify in note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>