force-app/main/default/objects/Candidate__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <description>Full name of the candidate, typically auto-combined from First and Last Name.</description>
    <label>Candidate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>