force-app/main/default/objects/Candidate__c/fields/Candidate_Rating__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rating__c</fullName>
    <description>Green: Solid Candidate, meet most of requirements, have degrees, certs etc
Amber: Doesnt meet all of the requirements but will still be considered 
Red: Meets none of the requirements
DO NOT CONTACT: Candidate asked to not be contacted or something problematic occurred</description>
    <label>Candidate Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>DO NOT CONTACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>