force-app/main/default/objects/Candidate__c/fields/Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Contact_Made__c</fullName>
    <description>This field will populate each time the Recruiter clicks on the Made Contact button</description>
    <label>Contact Made</label>
    <type>Date</type>
</CustomField>