force-app/main/default/objects/Candidate__c/fields/Counter_Offer_Risk__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Risk__c</fullName>
    <description>Likelihood of candidate accepting a counter offer.</description>
    <inlineHelpText>Likelihood of candidate accepting a counter offer.</inlineHelpText>
    <label>Counter Offer Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>