force-app/main/default/objects/Candidate__c/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <description>This field will determine how this record was created</description>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Candidate Email</fullName>
            </value>
            <value>
                <fullName>Internal Referral Email</fullName>
            </value>
            <value>
                <fullName>Culture Site Application Form Email</fullName>
            </value>
            <value>
                <fullName>Manual Creation</fullName>
            </value>
            <value>
                <fullName>Wiza Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>