force-app/main/default/objects/Candidate__c/fields/Criminal_Record__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Record__c</fullName>
    <description>Disclosure of any criminal history.</description>
    <inlineHelpText>Disclosure of any criminal history.</inlineHelpText>
    <label>Criminal Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>