force-app/main/default/objects/Candidate__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <description>The candidate’s current job title or role at their current employer.</description>
    <label>Current Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>