force-app/main/default/objects/Candidate__c/fields/CV_Number__c.field-meta.xml
<CustomField>
    <fullName>CV_Number__c</fullName>
    <description>Indicates the version number of the Candidate profile based on CV updates.
Every time the Candidate submits a new or updated CV, a new Candidate record is created and the CV Version increments by 1.
Version 1 represents the initial submission.</description>
    <label>CV Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>