force-app/main/default/objects/Candidate__c/fields/CV_Title__c.field-meta.xml
<CustomField>
    <fullName>CV_Title__c</fullName>
    <description>Descriptive title of the uploaded CV document (e.g., “JohnDoe_SFDCArchitect.pdf”). 
This field is for Automation purposes</description>
    <label>CV Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>