force-app/main/default/objects/Candidate__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Candidate’s date of birth, useful for background checks or demographics (ensure compliance with local data privacy laws).</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>