force-app/main/default/objects/Candidate__c/fields/Days_Left_On_Project__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_On_Project__c</fullName>
    <formula>Project__r.End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left On Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>