force-app/main/default/objects/Candidate__c/fields/Days_since_last_contact__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_contact__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact_Made__c)),
    TODAY() - Contact_Made__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>