force-app/main/default/objects/Candidate__c/fields/Debt_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Company__c</fullName>
    <description>Whether the candidate owes money to a previous employer.</description>
    <inlineHelpText>Whether the candidate owes money to a previous employer.</inlineHelpText>
    <label>Debt to Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>