force-app/main/default/objects/Candidate__c/fields/Decision_Factors__c.field-meta.xml
<CustomField>
    <fullName>Decision_Factors__c</fullName>
    <description>Key factors influencing candidate’s job decision.</description>
    <inlineHelpText>Key factors influencing candidate’s job decision.</inlineHelpText>
    <label>Decision Factors</label>
    <type>TextArea</type>
</CustomField>