force-app/main/default/objects/Candidate__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>Highest Degree the Candidate has attained</description>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEng</fullName>
            </value>
            <value>
                <fullName>BIS</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>Honours</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>BCom</fullName>
            </value>
            <value>
                <fullName>BCompt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
            <value>
                <fullName>BSc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>