force-app/main/default/objects/Candidate__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Primary email address for contacting the candidate.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>