force-app/main/default/objects/Candidate__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>For Automation purposes</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>