force-app/main/default/objects/Candidate__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant - Not yet hired</fullName>
                <default>true</default>
                <label>Applicant - Not yet hired</label>
            </value>
            <value>
                <fullName>TFO</fullName>
            </value>
            <value>
                <fullName>On a Client Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>