force-app/main/default/objects/Candidate__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description>Required by SA Government</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Coloured</fullName>
            </value>
            <value>
                <fullName>⁠Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>