force-app/main/default/objects/Candidate__c/fields/Fields_Updated_by_AI__c.field-meta.xml
<CustomField>
    <fullName>Fields_Updated_by_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fields Updated by AI</label>
    <type>Checkbox</type>
</CustomField>