force-app/main/default/objects/Candidate__c/fields/Final_Impression__c.field-meta.xml
<CustomField>
    <fullName>Final_Impression__c</fullName>
    <label>Final Impression</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive - Keep in Talent pool</fullName>
            </value>
            <value>
                <fullName>Neutral - Maybe in a year</fullName>
            </value>
            <value>
                <fullName>Negative - left a bad impression, do not contact again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>