force-app/main/default/objects/Candidate__c/fields/Hobbies_Interests__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interests__c</fullName>
    <description>Personal interests and hobbies.</description>
    <inlineHelpText>Personal interests and hobbies.</inlineHelpText>
    <label>Hobbies &amp; Interests</label>
    <type>TextArea</type>
</CustomField>