force-app/main/default/objects/Candidate__c/fields/How_did_they_first_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_first_hear_about_us__c</fullName>
    <label>How did they first hear about us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Google Ad</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Online Search</fullName>
            </value>
            <value>
                <fullName>Job Post</fullName>
            </value>
            <value>
                <fullName>University Event</fullName>
            </value>
            <value>
                <fullName>Entelect Recruiter</fullName>
            </value>
            <value>
                <fullName>External recruiter</fullName>
            </value>
            <value>
                <fullName>News Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>