force-app/main/default/objects/Candidate__c/fields/ID_Passport_nr__c.field-meta.xml
<CustomField>
    <fullName>ID_Passport_nr__c</fullName>
    <label>ID/ Passport nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>