force-app/main/default/objects/Candidate__c/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>South African Identification Number</fullName>
            </value>
            <value>
                <fullName>Passport Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>