force-app/main/default/objects/Candidate__c/fields/Increase__c.field-meta.xml
<CustomField>
    <fullName>Increase__c</fullName>
    <label>Increase %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>