force-app/main/default/objects/Candidate__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>The Candidate&apos;s LinkedIn URL</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>