force-app/main/default/objects/Candidate__c/fields/Medical_Aid_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Medical_Aid_Contribution__c</fullName>
    <description>Details of medical aid contributions.</description>
    <inlineHelpText>Details of medical aid contributions.</inlineHelpText>
    <label>Medical Aid Contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>