force-app/main/default/objects/Candidate__c/fields/Mentorship_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Mentorship_Involvement__c</fullName>
    <description>Whether the candidate mentors or coaches others.</description>
    <inlineHelpText>Whether the candidate mentors or coaches others.</inlineHelpText>
    <label>Mentorship Involvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>