force-app/main/default/objects/Candidate__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <description>Duration of notice period before candidate can start.</description>
    <inlineHelpText>Duration of notice period before candidate can start.</inlineHelpText>
    <label>Notice Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>