force-app/main/default/objects/Candidate__c/fields/Other_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Other_Contributions__c</fullName>
    <description>Any additional company contributions.</description>
    <inlineHelpText>Any additional company contributions.</inlineHelpText>
    <label>Other Contributions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>