force-app/main/default/objects/Candidate__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>AI Generated overview of Candidate&apos;s CV</description>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>