force-app/main/default/objects/Candidate__c/fields/Pension_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Pension_Contribution__c</fullName>
    <description>Details of pension contributions.</description>
    <inlineHelpText>Details of pension contributions.</inlineHelpText>
    <label>Pension Contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>