force-app/main/default/objects/Candidate__c/fields/Planned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Planned_Leave__c</fullName>
    <label>Planned Leave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>