force-app/main/default/objects/Candidate__c/fields/Preferred_Environment__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Environment__c</fullName>
    <description>Ideal working environment (e.g., remote, hybrid, in-office).</description>
    <inlineHelpText>Ideal working environment (e.g., remote, hybrid, in-office).</inlineHelpText>
    <label>Preferred Environment</label>
    <type>TextArea</type>
</CustomField>