force-app/main/default/objects/Candidate__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>This is the name the Candidate prefer you call them by</description>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>