force-app/main/default/objects/Candidate__c/fields/Primary_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Candidate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Candidate</label>
    <type>Checkbox</type>
</CustomField>