force-app/main/default/objects/Candidate__c/fields/Reason_for_wanting_to_leave__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_wanting_to_leave__c</fullName>
    <label>Reason for wanting to leave</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>