force-app/main/default/objects/Candidate__c/fields/Reasons_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Leaving__c</fullName>
    <description>Explanation for leaving previous roles.</description>
    <label>Reasons for Leaving</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>