force-app/main/default/objects/Candidate__c/fields/Recruiter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Notes__c</fullName>
    <description>Recruiter’s considerations or concerns.</description>
    <inlineHelpText>Recruiter’s considerations or concerns.</inlineHelpText>
    <label>Recruiter Notes</label>
    <type>TextArea</type>
</CustomField>