force-app/main/default/objects/Candidate__c/fields/Region_applying_for__c.field-meta.xml
<CustomField>
    <fullName>Region_applying_for__c</fullName>
    <label>Region applying for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRETORIA, South Africa</fullName>
            </value>
            <value>
                <fullName>CAPE TOWN, South Africa</fullName>
            </value>
            <value>
                <fullName>DURBAN, South Africa</fullName>
            </value>
            <value>
                <fullName>Johannesburg, South Africa</fullName>
            </value>
            <value>
                <fullName>Amsterdam, The Netherlands</fullName>
            </value>
            <value>
                <fullName>Auckland, New Zealand</fullName>
            </value>
            <value>
                <fullName>Wellington, New Zealand</fullName>
            </value>
            <value>
                <fullName>London, United Kingdom</fullName>
            </value>
            <value>
                <fullName>Sydney, Australia</fullName>
            </value>
            <value>
                <fullName>Harare, Zimbabwe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>