force-app/main/default/objects/Candidate__c/fields/Role_s_applying_for__c.field-meta.xml
<CustomField>
    <fullName>Role_s_applying_for__c</fullName>
    <description>Roles indicated by candidate that that are interested in</description>
    <label>Role/s applying for</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>