force-app/main/default/objects/Candidate__c/fields/Seniority_Level__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Level__c</fullName>
    <description>Role level of the candidate (e.g., Junior, Mid, Senior).</description>
    <label>Seniority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>