force-app/main/default/objects/Candidate__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>List of technical and soft skills tagged to the candidate (e.g., Apex, LWC, Agile, Communication).</description>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>