force-app/main/default/objects/Candidate__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Proposed or confirmed start date.</description>
    <inlineHelpText>Proposed or confirmed start date.</inlineHelpText>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>